web/stylings/index.css
/* INDEX.CSS */
/* IMPORTS */
@import "./const-vars.css";
@import "./typography.css";


/* GLOBAL RESET */
* {
    margin: 0;
    padding: 0;
    box-sizing: 0;
}

.icons {
    max-width: 16px;
    min-width: 16px;

    image-rendering: pixelated;
}

body {
    background: var(--COLOR-ABSOLUTE-BACKGROUND);
    display: flex;
    flex-direction: column;
    gap: 1.5em;
}

header, footer {
    background: var(--COLOR-MAIN-BACKGROUND);
}

body {
    display: flex;
    flex-direction: column;
    gap: 5px;
    padding: .5em;
    overflow: hidden;
}

/* HEADER */
header {
    display: flex;
    flex-direction: row;
    gap: 10px;

    align-items: center;
}

nav ul {
    display: flex;
    flex-direction: row;
    list-style: none;
    margin: 0;
    padding: 0;
}

nav li {
    white-space: nowrap;
    display: flex;
    align-items: center;
    gap: 5px;
}

nav li a {
    padding: 15px;
}

#main-title {
    white-space: nowrap;
    padding: 15px;
}


nav li button {
    background: none;
    border: none;
    font: inherit;
    color: inherit;
    cursor: pointer;
    padding: 0;

    padding: 15px;
}


nav li:hover {
    background: var(--COLOR-HOVER-BACKGROUND);
    
    /* box-shadow: [inset] [h-offset] [v-offset] [blur] [spread] [color]*/
    box-shadow: inset 0 -3px 0 var(--COLOR-MAIN-ACCENT);
}

#search-logs {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 0 15px;
    cursor: pointer;
}

#search-input {
    width: 0;
    opacity: 0;
    border: none;
    outline: none;
    background: transparent;
    transition: width 0.4s ease, opacity 0.3s ease;
}

#search-logs.active #search-input {
    width: 150px;
    opacity: 1;
    margin-left: 10px;
}

/* MAIN */
main {
    display: flex;
    flex-direction: row;
    gap: .5em;
}

.mother-panels {
    background: var(--COLOR-MAIN-BACKGROUND);
}

#explorer-panel {
    flex: 1;
}

#logging-panel {
    flex: 2;
}

/* RIGHT PANEL */
#logs-explorer {
    display: flex;
    flex-direction: row;
    padding: 10px;
    gap: 5px;

    align-items: center;
}

#logs-explorer label {
    white-space: nowrap;
}

#logs-explorer select {
    background: var(--COLOR-HOVER-BACKGROUND);
    font-size: inherit;
    border: none;
    padding: 0 10px;
    text-align: center;

    text-overflow: ellipsis;
}


/* LEFT PANEL */
#console-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 10px;

    border-bottom: 2px solid var(--COLOR-MAIN-TEXT);
}

#log-title {
    display: flex;
    align-items: center;
    white-space: nowrap;
}

#clocks {
    display: flex;
    flex-direction: column;
    text-align: right;
}

#clocks p {
    white-space: nowrap;
}

/* MODALS */
.hidden {
    display: none !important;
}

.modal {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: var(--COLOR-OVERLAY);
    z-index: 100;
    display: flex;
    align-items: center;
    justify-content: center;
}

.modal-content {
    background: var(--COLOR-MAIN-BACKGROUND);
    border: 2px solid var(--COLOR-ABSOLUTE-BACKGROUND);
    color: inherit;

    min-width: 400px;
    max-width: 600px;

    padding: 30px 15px;
}

.modal-title {
    margin-bottom: 15px;
    padding-bottom: 5px;
    border-bottom: 2px solid var(--COLOR-MAIN-TEXT);
}

.modal-content input, .modal-content select {
    color: var(--COLOR-MAIN-BACKGROUND);
    padding: 2px;
}

.modal-btn {
    padding: 5px;
    border: none;
    cursor: pointer;
}

.modal-confirm-btn {
    background: var(--COLOR-MAIN-ACCENT);
}

.modal-cancel-btn {
    background: none;
}

#new-log-form {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

#confirm-new-log {
    display: flex;
    justify-content: flex-end;
    gap: 10px;
    margin-top: 10px;
}

